feat base base styles  for header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Leasing From D&M</title>
   </head>
   <body>
@@ -10,28 +18,27 @@
       <header class="header">
         <div class="contener">
           <div class="header__inner">
-            <a class="logo" href="#" >
-                <img src="assets/svg/logo.svg" alt="logo" class="logo__img">
+            <a class="logo" href="#">
+              <img src="assets/svg/logo.svg" alt="logo" class="logo__img" />
             </a>
             <nav class="menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">NEW CARS</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">PRE-OWNED CARS</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">FINANCE</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">LEASE VS BUY</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link">CONTACT US</a>
-                    </li>                    
-                </ul>
-                
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">NEW CARS</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">PRE-OWNED CARS</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">FINANCE</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">LEASE VS BUY</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">CONTACT US</a>
+                </li>
+              </ul>
             </nav>
           </div>
         </div>
