--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
-        <div class="contener">
+      <header class="header header-main">
+        <div class="container">
           <div class="header__inner">
             <a class="logo" href="#">
               <img src="assets/svg/logo.svg" alt="logo" class="logo__img" />
@@ -24,19 +24,19 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">NEW CARS</a>
+                  <a href="#" class="link menu__link">NEW CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">PRE-OWNED CARS</a>
+                  <a href="#" class="link menu__link">PRE-OWNED CARS</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">FINANCE</a>
+                  <a href="#" class="link menu__link">FINANCE</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">LEASE VS BUY</a>
+                  <a href="#" class="link menu__link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">CONTACT US</a>
+                  <a href="#" class="link menu__link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -46,7 +46,108 @@
 
       <main class="main"></main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="container">
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footeer__menu-item">
+                <h4 class="footer__menu-title">Products</h4>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Used</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">New</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Sell your car</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footeer__menu-item">
+                <h4 class="footer__menu-title">Resources</h4>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="" class="link footer__menu-link">Blog</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="" class="link footer__menu-link">FAQ</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="" class="link footer__menu-link">Contact us</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footeer__menu-item">
+                <h4 class="footer__menu-title">Work With TrueCar</h4>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Dealers</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Partners</a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footeer__menu-item">
+                <h4 class="footer__menu-title">About</h4>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">About us</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Team</a>
+              </li>
+              <li class="footeer__menu-item">
+                <a href="#" class="link footer__menu-link">Careers</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="app__list">
+            <li class="app__item">
+              <a href="" class="app__link">
+                <img
+                  class="app__img"
+                  src="./assets/svg/app-store.svg"
+                  alt="app-store"
+                />
+              </a>
+            </li>
+            <li class="app__item">
+              <a href="" class="app__link">
+                <img
+                  class="app__img"
+                  src="./assets/svg/google-play.svg"
+                  alt="google-play"
+                />
+              </a>
+            </li>
+          </ul>
+          <div class="footer__copy">
+            <p class="footer__copy-text">
+              For questions about the TrueCar Auto Buying Service please call
+              <a class="link link-tel" href="#">1-888-878-3227</a>. Certified Dealers are contractually obligated by
+              TrueCar to meet certain customer service requirements and complete
+              the TrueCar Dealer Certification Program.
+            </p>
+            <p class="footer__copy-text">
+              TrueCar does not broker, sell, or lease motor vehicles. Unless
+              otherwise noted, all vehicles shown on this website are offered
+              for sale by licensed motor vehicle dealers. All vehicles are
+              subject to prior sale. By accessing this website, you agree to the
+              TrueCar Terms of Service and Privacy Policy.
+            </p>
+          </div>
+            <nav class="copy__nav">
+                <ul class="copy__nav-list">
+                    <il class="copy__nav-item"><a href="#" class="link copy__nav-link">Terms of Service</a></il>
+                    <il class="copy__nav-item"><a href="#" class="link copy__nav-link">Privacy Policy</a></il>
+                    <il class="copy__nav-item"><a href="#" class="link copy__nav-link">Do Not Sell My Personal Information</a></il>
+                    
+                </ul>
+            </nav>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
